# mir

./: spread.yaml
.github/workflows/: spread.yml
debian/: control
src/: CMakeLists.txt
src/server/frontend_wayland/: input_method_grab_keyboard_v2.h
src/server/frontend_xwayland/: xwayland_surface.cpp  xwayland_surface.h
tests/performance-tests/: CMakeLists.txt
